Tweaks to CustomerUiController